# Ev_Crawler_Automation

./: .gitmodules
Tavily_ev-automation-main/evAutomationUpdated/: .env.example  .gitignore  ARCHITECTURE_REVIEW.md  CODEBASE_OVERVIEW.md  Grouped_use_cases_for_Sample 100 questions.xlsx  README.md  Sample questions.xlsx  analyze_generated_reports.py  config.py  eval_runner.py  main.py  pyproject.toml  requirements.txt
Tavily_ev-automation-main/evAutomationUpdated/analysis_out/: REPORT.md  human_review_template.xlsx  qwen14b_merged.csv  qwen14b_merged.xlsx  qwen14b_rag_improvement_per_q.csv  qwen14b_rag_improvement_report.md  qwen14b_rag_improvement_summary.csv
Tavily_ev-automation-main/evAutomationUpdated/analysis_out/qwen14b_v2/: REPORT.md  human_review_template.xlsx  qwen14b_merged.csv  qwen14b_merged.xlsx
Tavily_ev-automation-main/evAutomationUpdated/artifacts/: Golden_answers.xlsx
Tavily_ev-automation-main/evAutomationUpdated/artifacts/qdrant/: meta.json
Tavily_ev-automation-main/evAutomationUpdated/artifacts/response_outputs/: qwen14b_hybrid_rag.jsonl  qwen14b_hybrid_rag.xlsx  qwen14b_hybrid_rag_v2.jsonl  qwen14b_hybrid_rag_v2.xlsx  qwen14b_local_rag.jsonl  qwen14b_local_rag.xlsx  qwen14b_local_rag_v2.jsonl  (+3 more)
Tavily_ev-automation-main/evAutomationUpdated/data/: GNEM updated excel.xlsx  GNEM_Generated_Questions.xlsx  GNEM_Golden_Questions.xlsx  Sample 50 questions.xlsx
Tavily_ev-automation-main/evAutomationUpdated/tests/: test_eval_runner_canonical.py  test_evaluation_export.py  test_excel_loader.py  test_research_eval.py  test_retrieval.py  test_settings.py
(+247 files in other folders)
